10 Aug 25 
    6 pm
        Created a basic layout of the website, implemented basic functionality for 
        selecting the basic tourist spots, cities, etc.
    7 pm
        used react context to make all user inputs global
        change updates.txt to changelog.txt and moved it to root
    9 pm 
    added geoapify api function calls to autocomplete a city search
    9:15 pm
    disables the buttons until a valid city is selected from the suggestions
    11 pm
    disables the  buttons until the form is complete in both bestplan and customplan